# pokeapi

./: .env  .env.local.example  claude.md  gtm-checklists.md  gtmplan.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
app/: layout.tsx  loading.tsx  page.tsx  sitemap.ts
app/api/cards/[id]/: route.ts
app/api/cards/search/: route.ts
app/api/keys/: route.ts
app/api/keys/[id]/: route.ts
app/api/rarities/: route.ts
app/api/sets/: route.ts
app/api/stripe/checkout/: route.ts
app/api/stripe/portal/: route.ts
app/api/stripe/webhook/: route.ts
app/cards/[id]/: page.tsx
app/dashboard/: page.tsx
app/docs/: page.tsx
app/guides/: page.tsx
app/guides/bgs-grading/: page.tsx
app/guides/cgc-grading/: page.tsx
app/guides/psa-grading/: page.tsx
app/guides/which-grading-company/: page.tsx
app/login/: page.tsx
app/pricing/: page.tsx
app/sets/[slug]/: page.tsx
components/: api-key-manager.tsx  card-grid.tsx  card-item.tsx  card-modal.tsx  code-snippets.tsx  filter-dropdowns.tsx  pricing-button.tsx  search-input.tsx  search-page.tsx  subscription-manager.tsx  upsell-banner.tsx
components/ui/: dialog.tsx
docs/: google-oauth-setup.md
docs/ebay-api/: code-examples.md  example-responses.json  openapi.json  rapidapi-listing.md
lib/: api-auth.ts  api-keys.ts  auth.ts  db.ts  queries.ts  schema.sql  stripe.ts
public/: llms.txt  robots.txt
scraper/: .env.example  __init__.py  api.py  api_client.py  pyproject.toml  scraper.py
scraper/tests/: test_scraper.py
scripts/: update-card-data.ts
